--- a/nml-ms/src/main/resources/application.properties
+++ b/nml-ms/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-spring.application.name=nmlOnline
+server.port=8080
+spring.application.name=nml-ms
+logging.level.root=INFO
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=none
