Secured login (keep logged in not working for now)

--- a/nml-ms/src/main/resources/application.properties
+++ b/nml-ms/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=always
 spring.jpa.show-sql=true
+
+#True in prod env
+app.cookie.secure=false
