--- a/nml-ms/pom.xml
+++ b/nml-ms/pom.xml
@@ -27,6 +27,8 @@
 	</scm>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>21</java.version>
         <spring.boot.version>3.5.6</spring.boot.version>
         <lombok.version>1.18.32</lombok.version>
