--- a/nml-ms/src/main/resources/application.properties
+++ b/nml-ms/src/main/resources/application.properties
@@ -6,9 +6,10 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 #True in prod env
 app.cookie.secure=false
