Update application properties and Dockerfile for Angular static file serving

--- a/nml-ms/src/main/resources/application.properties
+++ b/nml-ms/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.jpa.show-sql=false
 
 #True in prod env
 app.cookie.secure=false
+
+# Servir les fichiers statiques Angular depuis /app/static (Docker)
+spring.web.resources.static-locations=classpath:/static/,file:/app/static/
