Revert "Refactor SCSS styles for improved organization and consistency across components"
This reverts commit 1a7024224c7d87b78aec11c0def572a821177adf.

--- a/nml-ui-bst-angular/angular.json
+++ b/nml-ui-bst-angular/angular.json
@@ -60,13 +60,13 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "800kB",
-                  "maximumError": "1200kB"
+                  "maximumWarning": "500kB",
+                  "maximumError": "1MB"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "6kB",
-                  "maximumError": "10kB"
+                  "maximumWarning": "4kB",
+                  "maximumError": "8kB"
                 }
               ],
               "outputHashing": "all"
