Enhance resource management: update resource display in JoueurComponent, improve sell resource validation in PlayerController, and adjust resource handling in ResourceService

--- a/nml-ms/pom.xml
+++ b/nml-ms/pom.xml
@@ -112,6 +112,7 @@
                     </annotationProcessorPaths>
                     <source>21</source>
                     <target>21</target>
+                    <parameters>true</parameters>
                 </configuration>
             </plugin>
             <plugin>
